...
    <string name="show_solution">Show solution</string>
    <string name="hide_solution">Hide solution</string>

    <!-- Chapter components -->
    <string name="code">CODE</string>
    <string name="copy_content">Copy content</string>
    <string name="copy_successful">Code copied to clipboard</string>
    <string name="copy_failed">Failed to copy code</string>
    <string name="advanced">ADVANCED:</string>
    <string name="close_chapter">Close chapter</string>
    <string name="image_component_desc">Image component</string>
    <string name="zoom_in">Zoom in</string>
    <string name="zoom_out">Zoom out</string>
...
    <string name="my_email">gaspar.tamas97@protonmail.com</string>
    <string name="default_email_subject">About the LearnJava app</string>
    <string name="email_chooser">Select an e-mail app</string>

    <!-- Dark theme prompt. -->
    <string name="dark_theme_title">Dark theme</string>
    <string name="dark_theme_info">There is a dark theme! You can try it out now, or change it in the settings.</string>
    <string name="dark_theme_denied">No thanks</string>
    <string name="dark_theme_accepted">Use dark theme</string>
    <string name="dark_theme_system">
        The system dark mode seems to be on. Do you want to turn on the application\'s dark mode as well?
    </string>

...
